--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #Datasource Configuration
 spring.jpa.show_sql=true
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.password=
+# spring.datasource.url? docker compose file?? ????.
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.sql.init.encoding=utf-8
 spring.main.allow-bean-definition-overriding=true
 spring.sql.init.mode=always
