fix: restore datasource url at application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@
 spring.jpa.show_sql=true
 spring.datasource.username=postgres
 spring.datasource.password=
-# spring.datasource.url는 docker compose file에서 세팅한다.
-#spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.sql.init.encoding=utf-8
 spring.main.allow-bean-definition-overriding=true
 spring.sql.init.mode=always
