test: test artwork controller with spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Datasource Configuration
-spring.jpa.show_sql=true
+spring.jpa.show_sql=false
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.generate-dll = true
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.format_sql = false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.ddl-auto=create-drop
