--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Datasource Configuration
 spring.jpa.show_sql=false
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.username=claterms-user
+spring.datasource.password=claterms-password
+spring.datasource.url=jdbc:postgresql://localhost:5432/claterms
 spring.sql.init.encoding=utf-8
 spring.main.allow-bean-definition-overriding=true
 spring.sql.init.mode=always
@@ -11,7 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.id.new_generator_mappings = true
-spring.jpa.generate-dll = true
 spring.jpa.properties.hibernate.format_sql = false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
