get user by email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.format_sql = false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#?? ??? ???
+spring.devtools.remote.restart.enabled = true
