artwork에 nft의 transaction hash를 추가합니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=claterms-password
 spring.datasource.url=jdbc:postgresql://localhost:5432/claterms
 spring.sql.init.encoding=utf-8
 spring.main.allow-bean-definition-overriding=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.properties.hibernate.format_sql = false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
